# RMSNorm_Kernel

./: .gitignore  PROJECT_PLAN.md  README.md  pyproject.toml
benchmark/: README.md  rmsnorm_forge_suite.py
benchmark/common/: __init__.py  environment.py  table.py  tolerances.py
benchmark/correctness/: __init__.py  cases.py  checks.py  folding_models.py  references.py  summary.py
benchmark/harness/: __init__.py
benchmark/scripts/: bench_isolation.py  benchmark_rms_norm.py  check_correctness.py
benchmark/timing/: __init__.py  cold_start.py  competitors.py  configs.py  contracts.py  events.py  profiling.py  reporting.py  scenarios.py
src/fast_rmsnorm/ops/: __init__.py  rms_norm.py  utils.py
src/fast_rmsnorm/transformers/: __init__.py  folding.py  functional.py  rms_norm.py
test/transformers/: reference.py  test_folding.py  test_rms_norm.py
